tests/ui/types/union/union-types-array-2.stderr
error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> $DIR/union-types-array-2.rs:5:9
   |
LL |         x: [String; 3],
   |         ^^^^^^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
LL |         x: std::mem::ManuallyDrop<[String; 3]>,
   |            +++++++++++++++++++++++           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0740`.
